// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shared/components/Invite.story story.Otp 1`] = `
.c2 {
  box-sizing: border-box;
  padding: 40px;
  -webkit-flex: 3;
  -ms-flex: 3;
  flex: 3;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 180px;
}

.c13 {
  box-sizing: border-box;
  padding: 40px;
  background-color: #1B234A;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #00BFA5;
  color: #FFFFFF;
  min-height: 48px;
  font-size: 14px;
  padding: 0px 48px;
  margin-top: 16px;
  width: 100%;
}

.c12:active {
  opacity: 0.56;
}

.c12::-moz-focus-inner {
  border: 0;
}

.c12:hover,
.c12:focus {
  background: #00EAC3;
}

.c12:active {
  background: #26A69A;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: #FFFFFF;
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 100%;
}

.c10:active {
  opacity: 0.56;
}

.c10::-moz-focus-inner {
  border: 0;
}

.c10:hover,
.c10:focus {
  background: #373F64;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c11 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-transform: none;
}

.c11:hover,
.c11:focus {
  background: #222C59;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
  margin-bottom: 40px;
  width: 720px;
  background-color: #222C59;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  box-sizing: border-box;
  border: none;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 12px 16px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #FFFFFF;
}

.c7::-ms-clear {
  display: none;
}

.c7::-webkit-input-placeholder {
  opacity: 0.24;
}

.c7::-moz-placeholder {
  opacity: 0.24;
}

.c7:-ms-input-placeholder {
  opacity: 0.24;
}

.c7::placeholder {
  opacity: 0.24;
}

.c6 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 26px;
  line-height: 40px;
  margin: 0px;
  margin-bottom: 16px;
  color: #FFFFFF;
  text-align: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  word-break: break-all;
  margin: 0px;
  margin-bottom: 16px;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<form
  class="c0"
  width="720px"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
        color="light"
      />
      <div
        class="c4"
      >
        test@gravitational.com
      </div>
      <div
        class="c5"
      >
        <label
          class="c6"
          font-size="0"
        >
          Password
        </label>
        <input
          autocomplete="off"
          class="c7"
          color="text.onLight"
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <div
        class="c5"
      >
        <label
          class="c6"
          font-size="0"
        >
          Confirm Password
        </label>
        <input
          autocomplete="off"
          class="c7"
          color="text.onLight"
          placeholder="Confirm Password"
          type="password"
          value=""
        />
      </div>
      <div
        class="c8"
      >
        <div
          class="c9"
          width="180px"
        >
          <label
            class="c6"
            font-size="0"
          >
            Two factor token
          </label>
          <input
            autocomplete="off"
            class="c7"
            color="text.onLight"
            placeholder="123 456"
            value=""
          />
        </div>
        <a
          class="c10 c11"
          href="https://support.google.com/accounts/answer/1066447?co=GENIE.Platform%3DiOS&hl=en&oco=0"
          kind="secondary"
          rel="noreferrer"
          target="_blank"
          width="100%"
        >
          Download Google Authenticator
        </a>
      </div>
      <button
        class="c12"
        kind="primary"
        width="100%"
      >
        Submit
      </button>
    </div>
    <div
      class="c13"
    >
      <div>
        <div
          class="c14"
        >
          Scan the bar code with Google Authenticator to generate a two factor token.
        </div>
        <img
          border="8"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAcgAAAHIEAAAAAC/Wvl1AAAJV0lEQVR4nOzdsW4jORZA0fbC///LXowVTFIWmqAefUtzTrDJeEtltS+YPDx+fn39ASL+99svAPzr85//+fj47df4ycr5ff1bXD9h/2f3vcenTf0LrTzh2tnvd9/jfZ2QECJICBEkhAgSQgQJIYKEEEFCiCAhRJAQIkgI+fz5P50dOz870rT/u3VH0VZ+dv+32B9mW1H41vc9e18nJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQp6Mzl0rjCkV9stNjYytvG9hkOzs+F5nxO3vrL+vExJCBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSHLo3M8nB1bOztItv9pU8N3+59W54SEEEFCiCAhRJAQIkgIESSECBJCBAkhgoQQQULIG43OvcdOs7NDZ9cKQ3L7o4n3HKhzQkKIICFEkBAiSAgRJIQIEkIECSGChBBBQoggIWR5dO5uA0lT42Vnnzu1427/Hfaf0B2H+42/dSckhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCnozOTQ1mTdnfLzd1UenZcbjumF3hZ691/tadkBAiSAgRJIQIEkIECSGChBBBQoggIUSQECJICPkenbvbJrlrZwez9t9h39khubPvcPY763BCQoggIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5OPrq3FJ6LWpS0L3nzD1PUxdatp936l3uNZ9swcnJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQkYvbN3f8FW4SPPs1aErule+Fi6u7Xr2PTghIUSQECJICBEkhAgSQgQJIYKEEEFCiCAhRJAQ8jF5geV/b1Tq7Ja8qecW9vedvVi1s4vOCQkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGChJDl0bnCoNOUs/vaCjv5pv7d9jfUrTy3MGb3qt/CCQkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGChJAnF7ZeK1zFWbgA9ezPrji7HW7F1PfQHai7Zusc3IQgIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5Hvr3NTw0oqzI3nda1GvFS65feffbZ+tc/CGBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSFPRudWnL189OwQ177uOxQGFqeeULhEeP3NnJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAj5vrC1cLXlylDU2R13+084O1h47exut8K1viumBgvXn+CEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyMfqWFdhO9yUV126+Xc/u/8OK+52Ke/KE/adHXm0dQ5uQpAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyZHTu7KjU3a58LexKu3Z2QO09LnedYusc3JogIUSQECJICBEkhAgSQgQJIYKEEEFCiCAhZHnr3A+PGdppdvYJ+wq76M5+k1MDliu6G/XWOSEhRJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDy+eclQ1z7g0P7G+qmRqWmhu9WfuPCpr53VtiPaOsc5AgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCPn/+T91NZ/tP2B9buzY1QrjvbtfOrpgafPuNPXtOSAgRJIQIEkIECSGChBBBQoggIUSQECJICBEkhHyPznV2bv3dz147O+g0NV5WGFub+nvY36jX/Xu4tv4bOyEhRJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyZOvcvpUxpf2RpsJY1bWpa2f3P23f2VG/qUtup76z9Sc4ISFEkBAiSAgRJIQIEkIECSGChBBBQoggIUSQELI8Ojc1KlXYZjd1mefUtbN3GzecGt87+/3uf9o1W+cgR5AQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyPTp3dlyrMII19Q5TQ1wr9sfA7vZvPLXVb2pI7hknJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQp5snfuNnVt/94SzV5IWLnfdf0JhoG7f2b/JFa96ByckhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCPn4e+Tm7I2xFYbdbYYPa1BNWFEbRrp39Hl71Dk5ICBEkhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSELF/YOmV/09nUvraz9rfDXetu6iu8w9Snrf9uTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIQ82Tr3w//hZteBvvM+vLtt1Fv5tMLw3bWpa4gfP+uEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyPLWucKOsKnhu6kxu8IVqiufdnbccF/3r2SdExJCBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGfr3nM1GWpZwe+zm4v23d2f9/+O+x/v1NPKFwl++CEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyPLoXGEo6m5jdlNb3N5jb92KwuWus+/ghIQQQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjH11fjQtF93QG199gD173q9D2+3wcnJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQj7udknpn8Ehrv19Yt1Pu3Z2i9vZ8b2zI4+v+h6ckBAiSAgRJIQIEkIECSGChBBBQoggIUSQECJICPm+sPXs1q4V1wNJ++NlZ6282f4w28oTCpfcFnYe7n8Pr/rWnZAQIkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAj5/Pk/nd1Hd3a8rKCw7+/sHrizQ3LXpj7tVc91QkKIICFEkBAiSAgRJIQIEkIECSGChBBBQoggIeTJ6Ny1qctSu87+xvvby1Z20Z21/y/f/Y1fNRbohIQQQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjy6FzX1IjbynOnriQtvMOK7vewb2rn4eMJTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIS80ejc1IWtZy+CvdtOvmtTg3pTY3b772DrHLwhQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjy6FxhtGvlHaY2yV1beW7hCtV93d1uUz879WkPTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIQ8GZ3rjnbtD76d3X92ber60v0xsClnB9/OsnUO3pAgIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5KMwdgQ8OCEhRJAQ8v8AAAD//1QuL6EmJFBiAAAAAElFTkSuQmCC"
          width="152"
        />
      </div>
    </div>
  </div>
</form>
`;

exports[`shared/components/Invite.story story.OtpError 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 8px;
  box-sizing: border-box;
  box-shadow: 0 0 2px rgba(0,0,0,.12),0 2px 2px rgba(0,0,0,.24);
  font-weight: 400;
  font-size: 16px;
  margin: 0 0 16px 0;
  min-height: 48px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-all;
  background: #f50057;
  color: #FFFFFF;
}

.c4 a {
  color: #FFFFFF;
}

.c2 {
  box-sizing: border-box;
  padding: 40px;
  -webkit-flex: 3;
  -ms-flex: 3;
  flex: 3;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 180px;
}

.c14 {
  box-sizing: border-box;
  padding: 40px;
  background-color: #1B234A;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #00BFA5;
  color: #FFFFFF;
  min-height: 48px;
  font-size: 14px;
  padding: 0px 48px;
  margin-top: 16px;
  width: 100%;
}

.c13:active {
  opacity: 0.56;
}

.c13::-moz-focus-inner {
  border: 0;
}

.c13:hover,
.c13:focus {
  background: #00EAC3;
}

.c13:active {
  background: #26A69A;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: #FFFFFF;
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 100%;
}

.c11:active {
  opacity: 0.56;
}

.c11::-moz-focus-inner {
  border: 0;
}

.c11:hover,
.c11:focus {
  background: #373F64;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c12 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-transform: none;
}

.c12:hover,
.c12:focus {
  background: #222C59;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
  margin-bottom: 40px;
  width: 720px;
  background-color: #222C59;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c8 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  box-sizing: border-box;
  border: none;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 12px 16px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #FFFFFF;
}

.c8::-ms-clear {
  display: none;
}

.c8::-webkit-input-placeholder {
  opacity: 0.24;
}

.c8::-moz-placeholder {
  opacity: 0.24;
}

.c8:-ms-input-placeholder {
  opacity: 0.24;
}

.c8::placeholder {
  opacity: 0.24;
}

.c7 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 26px;
  line-height: 40px;
  margin: 0px;
  margin-bottom: 16px;
  color: #FFFFFF;
  text-align: center;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  word-break: break-all;
  margin: 0px;
  margin-bottom: 16px;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

<form
  class="c0"
  width="720px"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
        color="light"
      />
      <div
        class="c4"
        kind="danger"
      >
        <div>
          Server error with a long teeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeext
        </div>
      </div>
      <div
        class="c5"
      >
        test@gravitational.com
      </div>
      <div
        class="c6"
      >
        <label
          class="c7"
          font-size="0"
        >
          Password
        </label>
        <input
          autocomplete="off"
          class="c8"
          color="text.onLight"
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <div
        class="c6"
      >
        <label
          class="c7"
          font-size="0"
        >
          Confirm Password
        </label>
        <input
          autocomplete="off"
          class="c8"
          color="text.onLight"
          placeholder="Confirm Password"
          type="password"
          value=""
        />
      </div>
      <div
        class="c9"
      >
        <div
          class="c10"
          width="180px"
        >
          <label
            class="c7"
            font-size="0"
          >
            Two factor token
          </label>
          <input
            autocomplete="off"
            class="c8"
            color="text.onLight"
            placeholder="123 456"
            value=""
          />
        </div>
        <a
          class="c11 c12"
          href="https://support.google.com/accounts/answer/1066447?co=GENIE.Platform%3DiOS&hl=en&oco=0"
          kind="secondary"
          rel="noreferrer"
          target="_blank"
          width="100%"
        >
          Download Google Authenticator
        </a>
      </div>
      <button
        class="c13"
        kind="primary"
        width="100%"
      >
        Submit
      </button>
    </div>
    <div
      class="c14"
    >
      <div>
        <div
          class="c15"
        >
          Scan the bar code with Google Authenticator to generate a two factor token.
        </div>
        <img
          border="8"
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAcgAAAHIEAAAAAC/Wvl1AAAJV0lEQVR4nOzdsW4jORZA0fbC///LXowVTFIWmqAefUtzTrDJeEtltS+YPDx+fn39ASL+99svAPzr85//+fj47df4ycr5ff1bXD9h/2f3vcenTf0LrTzh2tnvd9/jfZ2QECJICBEkhAgSQgQJIYKEEEFCiCAhRJAQIkgI+fz5P50dOz870rT/u3VH0VZ+dv+32B9mW1H41vc9e18nJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQp6Mzl0rjCkV9stNjYytvG9hkOzs+F5nxO3vrL+vExJCBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSHLo3M8nB1bOztItv9pU8N3+59W54SEEEFCiCAhRJAQIkgIESSECBJCBAkhgoQQQULIG43OvcdOs7NDZ9cKQ3L7o4n3HKhzQkKIICFEkBAiSAgRJIQIEkIECSGChBBBQoggIWR5dO5uA0lT42Vnnzu1427/Hfaf0B2H+42/dSckhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCnozOTQ1mTdnfLzd1UenZcbjumF3hZ691/tadkBAiSAgRJIQIEkIECSGChBBBQoggIUSQECJICPkenbvbJrlrZwez9t9h39khubPvcPY763BCQoggIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5OPrq3FJ6LWpS0L3nzD1PUxdatp936l3uNZ9swcnJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQkYvbN3f8FW4SPPs1aErule+Fi6u7Xr2PTghIUSQECJICBEkhAgSQgQJIYKEEEFCiCAhRJAQ8jF5geV/b1Tq7Ja8qecW9vedvVi1s4vOCQkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGChJDl0bnCoNOUs/vaCjv5pv7d9jfUrTy3MGb3qt/CCQkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGChJAnF7ZeK1zFWbgA9ezPrji7HW7F1PfQHai7Zusc3IQgIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5Hvr3NTw0oqzI3nda1GvFS65feffbZ+tc/CGBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSFPRudWnL189OwQ177uOxQGFqeeULhEeP3NnJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAj5vrC1cLXlylDU2R13+084O1h47exut8K1viumBgvXn+CEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyMfqWFdhO9yUV126+Xc/u/8OK+52Ke/KE/adHXm0dQ5uQpAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyZHTu7KjU3a58LexKu3Z2QO09LnedYusc3JogIUSQECJICBEkhAgSQgQJIYKEEEFCiCAhZHnr3A+PGdppdvYJ+wq76M5+k1MDliu6G/XWOSEhRJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDy+eclQ1z7g0P7G+qmRqWmhu9WfuPCpr53VtiPaOsc5AgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCPn/+T91NZ/tP2B9buzY1QrjvbtfOrpgafPuNPXtOSAgRJIQIEkIECSGChBBBQoggIUSQECJICBEkhHyPznV2bv3dz147O+g0NV5WGFub+nvY36jX/Xu4tv4bOyEhRJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyZOvcvpUxpf2RpsJY1bWpa2f3P23f2VG/qUtup76z9Sc4ISFEkBAiSAgRJIQIEkIECSGChBBBQoggIUSQELI8Ojc1KlXYZjd1mefUtbN3GzecGt87+/3uf9o1W+cgR5AQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyPTp3dlyrMII19Q5TQ1wr9sfA7vZvPLXVb2pI7hknJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQp5snfuNnVt/94SzV5IWLnfdf0JhoG7f2b/JFa96ByckhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCPn4e+Tm7I2xFYbdbYYPa1BNWFEbRrp39Hl71Dk5ICBEkhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSELF/YOmV/09nUvraz9rfDXetu6iu8w9Snrf9uTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIQ82Tr3w//hZteBvvM+vLtt1Fv5tMLw3bWpa4gfP+uEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyPLWucKOsKnhu6kxu8IVqiufdnbccF/3r2SdExJCBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGfr3nM1GWpZwe+zm4v23d2f9/+O+x/v1NPKFwl++CEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyPLoXGEo6m5jdlNb3N5jb92KwuWus+/ghIQQQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjH11fjQtF93QG199gD173q9D2+3wcnJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQj7udknpn8Ehrv19Yt1Pu3Z2i9vZ8b2zI4+v+h6ckBAiSAgRJIQIEkIECSGChBBBQoggIUSQECJICPm+sPXs1q4V1wNJ++NlZ6282f4w28oTCpfcFnYe7n8Pr/rWnZAQIkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAj5/Pk/nd1Hd3a8rKCw7+/sHrizQ3LXpj7tVc91QkKIICFEkBAiSAgRJIQIEkIECSGChBBBQoggIeTJ6Ny1qctSu87+xvvby1Z20Z21/y/f/Y1fNRbohIQQQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjy6FzX1IjbynOnriQtvMOK7vewb2rn4eMJTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIS80ejc1IWtZy+CvdtOvmtTg3pTY3b772DrHLwhQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjy6FxhtGvlHaY2yV1beW7hCtV93d1uUz879WkPTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIQ8GZ3rjnbtD76d3X92ber60v0xsClnB9/OsnUO3pAgIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5KMwdgQ8OCEhRJAQ8v8AAAD//1QuL6EmJFBiAAAAAElFTkSuQmCC"
          width="152"
        />
      </div>
    </div>
  </div>
</form>
`;

exports[`shared/components/Invite.story story.U2f 1`] = `
.c2 {
  box-sizing: border-box;
  padding: 40px;
  -webkit-flex: 3;
  -ms-flex: 3;
  flex: 3;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c10 {
  box-sizing: border-box;
  padding: 40px;
  background-color: #1B234A;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  box-sizing: border-box;
  color: rgba(255,255,255,0.87);
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #00BFA5;
  color: #FFFFFF;
  min-height: 48px;
  font-size: 14px;
  padding: 0px 48px;
  margin-top: 16px;
  width: 100%;
}

.c8:active {
  opacity: 0.56;
}

.c8::-moz-focus-inner {
  border: 0;
}

.c8:hover,
.c8:focus {
  background: #00EAC3;
}

.c8:active {
  background: #26A69A;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
  margin-bottom: 40px;
  width: 720px;
  background-color: #222C59;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  box-sizing: border-box;
  border: none;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 12px 16px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #FFFFFF;
}

.c7::-ms-clear {
  display: none;
}

.c7::-webkit-input-placeholder {
  opacity: 0.24;
}

.c7::-moz-placeholder {
  opacity: 0.24;
}

.c7:-ms-input-placeholder {
  opacity: 0.24;
}

.c7::placeholder {
  opacity: 0.24;
}

.c6 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 26px;
  line-height: 40px;
  margin: 0px;
  margin-bottom: 16px;
  color: #FFFFFF;
  text-align: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  word-break: break-all;
  margin: 0px;
  margin-bottom: 16px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
  margin-top: 16px;
  text-align: center;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 8px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c14 {
  color: #FFFFFF;
}

<form
  class="c0"
  width="720px"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
        color="light"
      />
      <div
        class="c4"
      >
        test@gravitational.com
      </div>
      <div
        class="c5"
      >
        <label
          class="c6"
          font-size="0"
        >
          Password
        </label>
        <input
          autocomplete="off"
          class="c7"
          color="text.onLight"
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <div
        class="c5"
      >
        <label
          class="c6"
          font-size="0"
        >
          Confirm Password
        </label>
        <input
          autocomplete="off"
          class="c7"
          color="text.onLight"
          placeholder="Confirm Password"
          type="password"
          value=""
        />
      </div>
      <button
        class="c8"
        disabled=""
        kind="primary"
        width="100%"
      >
        Submit
      </button>
      <div
        class="c9"
        width="100%"
      >
        Insert your U2F key and press the button on the key
      </div>
    </div>
    <div
      class="c10"
    >
      <div>
        <div
          class="c11"
        >
          Insert your U2F key
        </div>
        <div
          class="c12"
          color="text.primary"
        >
          <div
            class="c13"
          >
            Press the button on the U2F key after you press the sign up button
          </div>
          <div
            class="c13"
          >
            <a
              class="c14"
              href="https://support.google.com/accounts/answer/6103523?hl=en"
              target="_blank"
            >
              Learn more
            </a>
             
            about U2F 2-Step Verification.
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`shared/components/Invite.story story.off 1`] = `
.c2 {
  box-sizing: border-box;
  padding: 40px;
  -webkit-flex: 3;
  -ms-flex: 3;
  flex: 3;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #00BFA5;
  color: #FFFFFF;
  min-height: 48px;
  font-size: 14px;
  padding: 0px 48px;
  margin-top: 16px;
  width: 100%;
}

.c8:active {
  opacity: 0.56;
}

.c8::-moz-focus-inner {
  border: 0;
}

.c8:hover,
.c8:focus {
  background: #00EAC3;
}

.c8:active {
  background: #26A69A;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
  margin-bottom: 40px;
  width: 464px;
  background-color: #222C59;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c7 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  box-sizing: border-box;
  border: none;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 12px 16px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #FFFFFF;
}

.c7::-ms-clear {
  display: none;
}

.c7::-webkit-input-placeholder {
  opacity: 0.24;
}

.c7::-moz-placeholder {
  opacity: 0.24;
}

.c7:-ms-input-placeholder {
  opacity: 0.24;
}

.c7::placeholder {
  opacity: 0.24;
}

.c6 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 26px;
  line-height: 40px;
  margin: 0px;
  margin-bottom: 16px;
  color: #FFFFFF;
  text-align: center;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  word-break: break-all;
  margin: 0px;
  margin-bottom: 16px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<form
  class="c0"
  width="464px"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
        color="light"
      />
      <div
        class="c4"
      >
        test@gravitational.com
      </div>
      <div
        class="c5"
      >
        <label
          class="c6"
          font-size="0"
        >
          Password
        </label>
        <input
          autocomplete="off"
          class="c7"
          color="text.onLight"
          placeholder="Password"
          type="password"
          value=""
        />
      </div>
      <div
        class="c5"
      >
        <label
          class="c6"
          font-size="0"
        >
          Confirm Password
        </label>
        <input
          autocomplete="off"
          class="c7"
          color="text.onLight"
          placeholder="Confirm Password"
          type="password"
          value=""
        />
      </div>
      <button
        class="c8"
        kind="primary"
        width="100%"
      >
        Submit
      </button>
    </div>
  </div>
</form>
`;
